--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -6,12 +6,12 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-#->
-font_family        FiraCode
-#font_family       JetBrains Mono Nerd Font
+#!= ->
+#font_family        FiraCode
+font_family       JetBrains Mono Nerd Font
 #font_family       DejaVu Sans Mono
 #bold_font        Fira Code Bold
-italic_font      Fira Code Italic
+#italic_font      Fira Code Italic
 #bold_italic_font auto
 
 #: You can specify different fonts for the bold/italic/bold-italic
