--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -1,6 +1,7 @@
 active-opacity = 0.90
 inactive-opacity = 0.80
 shadow = false
+corner-radius = 5
 
 opacity-rule = [
  "95:class_g = 'dmenu'",
@@ -15,7 +16,9 @@ opacity-rule = [
  "100:class_g = 'cool-retro-term'",
  "100:class_g = 'org.remmina.Remmina'",
  "100:class_g = 'net-runelite-client-RuneLite'",
- "100:class_g = 'steam_app_379430'",
+ "100:class_g = 'steam_app_379430'", # KCD?
+ "100:class_g = 'steam_app_297000'", # Heroes 3
+ "100:class_g = 'steam_app_1245620'", # Elden Ring
  "0:_NET_WM_STATE@[0]:32a *= '_NET_WM_STATE_HIDDEN'", # fix for tabbed windows
  "0:_NET_WM_STATE@[1]:32a *= '_NET_WM_STATE_HIDDEN'",
  "0:_NET_WM_STATE@[2]:32a *= '_NET_WM_STATE_HIDDEN'",
