--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -27,6 +27,7 @@ font_family       JetBrains Mono Nerd Font
 #:     bold_italic_font Operator Mono Medium Italic
 
 font_size 11.0
+#font_size 25
 
 #: Font size (in pts)
 
