--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -11,19 +11,22 @@
         <edit mode="assign" name="hinting">
             <bool>true</bool>
         </edit>
-        <!-- Should be disabled by default
-    <edit name="autohint" mode="assign">
-      <bool>false</bool>
-  </edit>-->
+        <!-- Should be disabled by default-->
+        <edit name="autohint" mode="assign">
+          <bool>false</bool>
+      </edit>-->
         <!-- Should be enabled by default -->
         <edit mode="assign" name="antialias">
             <bool>true</bool>
         </edit>
         <edit mode="assign" name="hintstyle">
-            <const>hintslight</const>
+            <const>hintmedium</const>
         </edit>
         <edit mode="assign" name="lcdfilter">
             <const>lcddefault</const>
+        </edit>
+        <edit mode="assign" name="embeddedbitmap">
+            <bool>false</bool>
         </edit>
     </match>
 </fontconfig>
