A few misc tweaks

--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -19,6 +19,7 @@ opacity-rule = [
  "100:class_g = 'steam_app_379430'", # KCD?
  "100:class_g = 'steam_app_297000'", # Heroes 3
  "100:class_g = 'steam_app_1245620'", # Elden Ring
+ "100:class_g = 'steam_app_233860'", # Kenshi
  "0:_NET_WM_STATE@[0]:32a *= '_NET_WM_STATE_HIDDEN'", # fix for tabbed windows
  "0:_NET_WM_STATE@[1]:32a *= '_NET_WM_STATE_HIDDEN'",
  "0:_NET_WM_STATE@[2]:32a *= '_NET_WM_STATE_HIDDEN'",
