--- a/.config/i3/config
+++ b/.config/i3/config
@@ -245,7 +245,8 @@ client.background       #F8F8F2
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
 # PROTIP: You can also dynamically set dmenu's colors this way:
 #bindsym $mod+d exec --no-startup-id j4-dmenu-desktop --dmenu='dmenu -i -nb "$bg" -nf "$hl" -sb "$hl" -sf "$fg-alt" -l 20'
-bindsym $mod+d exec --no-startup-id j4-dmenu-desktop --dmenu='dmenu -i -nb "#282A36" -nf "#F8F8F2" -sb "#6272A4" -sf "#F8F8F2" -l 20' # dracula
+bindsym $mod+d exec --no-startup-id j4-dmenu-desktop --dmenu='dmenu -i -nb "#282A36" -nf "#F8F8F2" -sb "#6272A4" -sf "#F8F8F2" -l 20 -fn "JetBrainsMono:pixelsize=16"' # dracula
+#bindsym $mod+d exec --no-startup-id j4-dmenu-desktop --dmenu='dmenu -i -nb "#282A36" -nf "#F8F8F2" -sb "#6272A4" -sf "#F8F8F2" -l 20' # dracula
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
