Vim & colour changes
* Add NERDTree, devicons, airline vim plugins
* Remove ALE (superseded by YCM)
* YCM config improvements for vim
* Fix colours in vimrc
* Use dracula colourscheme for kitty
* Set term to kitty to fix color/vim shenanigans

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -759,8 +759,9 @@ enable_audio_bell no
 #: }}}
 
 #: Color scheme {{{
-include ~/.cache/wal/colors-kitty.conf
+#include ~/.cache/wal/colors-kitty.conf
 #include ./nord.conf
+include ./dracula/dracula.conf
 
 # foreground #dddddd
 # background #000000
@@ -1025,6 +1026,7 @@ shell_integration no_cursor
 #: ask before opening the link.
 
 # term xterm-kitty
+term kitty
 
 #: The value of the TERM environment variable to set. Changing this
 #: can break many terminal programs, only change it if you know what
