Add i3wm-like pane swapping to tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -55,6 +55,12 @@ bind-key 7 select-window -t 7
 bind-key 8 select-window -t 8
 bind-key 9 select-window -t 9
 
+### i3wm-like pane swapping
+bind-key L swap-pane -s '{right-of}'
+bind-key H swap-pane -s '{left-of}'
+bind-key K swap-pane -s '{up-of}'
+bind-key J swap-pane -s '{right-of}'
+
 ## Split panes open into current dir
 bind-key % split-pane -h -c '#{pane_current_path}'
 bind-key '"' split-pane -v -c '#{pane_current_path}'
