--- a/.config/i3/config
+++ b/.config/i3/config
@@ -287,7 +287,7 @@ bar {
 #############################
 ###    startup programs   ###
 #############################
-exec_always picom --xrender-sync-fence --experimental-backends
+exec_always picom --xrender-sync-fence
 exec redshift-gtk
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
