--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -26,7 +26,9 @@ font_family       JetBrains Mono Nerd Font
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-#font_size 12.0 regular (94-104) DPI
+#regular (94-104) DPI
+#font_size 11
+
 #font_size 25 (4K)
 font_size 9
 
