--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -16,10 +16,16 @@ opacity-rule = [
  "100:class_g = 'cool-retro-term'",
  "100:class_g = 'org.remmina.Remmina'",
  "100:class_g = 'net-runelite-client-RuneLite'",
+ "100:class_g = 'Microsoft Teams - Preview'",
+ "100:class_g = 'Gimp-2.10'",
+ "100:class_g = 'Gimp'",
+ "100:class_g = 'libreoffice-draw'",
  "100:class_g = 'steam_app_379430'", # KCD?
  "100:class_g = 'steam_app_297000'", # Heroes 3
  "100:class_g = 'steam_app_1245620'", # Elden Ring
  "100:class_g = 'steam_app_233860'", # Kenshi
+ "100:class_g = 'ocarinaoftime-win64-shipping.exe'",
+ "100:class_g = 'engine.exe'", # POC
  "0:_NET_WM_STATE@[0]:32a *= '_NET_WM_STATE_HIDDEN'", # fix for tabbed windows
  "0:_NET_WM_STATE@[1]:32a *= '_NET_WM_STATE_HIDDEN'",
  "0:_NET_WM_STATE@[2]:32a *= '_NET_WM_STATE_HIDDEN'",
