Sort out fonts finally
* Set DPI to something sensible again
* Update font sizes
* Update font used by kitty

Required linking appropriate config items in /etc/fonts/conf.d/

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -14,7 +14,7 @@
         <!-- Should be disabled by default-->
         <edit name="autohint" mode="assign">
           <bool>false</bool>
-      </edit>-->
+      </edit>
         <!-- Should be enabled by default -->
         <edit mode="assign" name="antialias">
             <bool>true</bool>
