--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -8,7 +8,7 @@
 
 #!= ->
 #font_family        FiraCode
-font_family       JetBrains Mono Nerd Font
+font_family       JetBrainsMono Nerd Font Mono
 #font_family       DejaVu Sans Mono
 #bold_font        Fira Code Bold
 #italic_font      Fira Code Italic
@@ -27,10 +27,11 @@ font_family       JetBrains Mono Nerd Font
 #:     bold_italic_font Operator Mono Medium Italic
 
 #regular (94-104) DPI
-#font_size 11
+font_size 12
 
 #font_size 25 (4K)
-font_size 9
+# super DPI
+#font_size 9
 
 #: Font size (in pts)
 
