--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,8 +4,8 @@ set-option -g default-shell /usr/bin/zsh
 # Options
 unbind C-b
 set-option -g prefix C-k
-#set-option -g default-terminal "screen-256color"
-set-option -g default-terminal "tmux-256color" # using this fixes italics
+set-option -g default-terminal "screen-256color" # seems to be fine now we've fixed the font issue
+#set-option -g default-terminal "tmux-256color" # using this fixes italics? May be overridden by plugin
 set-option -g base-index 1
 set-window-option -g pane-base-index 1
 set-option -g mouse on
@@ -59,7 +59,7 @@ bind-key 9 select-window -t 9
 bind-key L swap-pane -s '{right-of}'
 bind-key H swap-pane -s '{left-of}'
 bind-key K swap-pane -s '{up-of}'
-bind-key J swap-pane -s '{right-of}'
+bind-key J swap-pane -s '{down-of}'
 
 ## Split panes open into current dir
 bind-key % split-pane -h -c '#{pane_current_path}'
@@ -68,3 +68,17 @@ bind-key '"' split-pane -v -c '#{pane_current_path}'
 ## Shortcuts
 bind-key e new-window "echo '/ ' > $HOME/.newmailcount ; mutt ; echo '- ' > $HOME/.newmailcount"
 bind-key r new-window "ipython3"
+
+
+
+# Plugin manager
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'dracula/tmux'
+
+## Dracula
+set -g @dracula-plugins " "
+
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '/usr/share/tmux-plugin-manager/tpm'
