--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -8,7 +8,7 @@
 
 #!= ->
 #font_family        FiraCode
-font_family       JetBrainsMono Nerd Font Mono
+font_family       JetBrains Mono
 #font_family       DejaVu Sans Mono
 #bold_font        Fira Code Bold
 #italic_font      Fira Code Italic
@@ -29,7 +29,8 @@ font_family       JetBrainsMono Nerd Font Mono
 #regular (94-104) DPI
 font_size 12
 
-#font_size 25 (4K)
+#(4K)
+#font_size 30
 # super DPI
 #font_size 9
 
