--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -1,13 +1,15 @@
 active-opacity = 0.90
 inactive-opacity = 0.80
 shadow = false
-corner-radius = 6
+corner-radius = 0
+#corner-radius = 6
 
 opacity-rule = [
  "95:class_g = 'dmenu'",
  "99:name *?= 'Zoom Meeting'",
  "100:name *?= 'Zoom Webinar'",
  "100:class_g = 'firefox'",
+ "100:class_g = 'Google-chrome'",
  "100:class_g = 'Opera'",
  "100:class_g = 'valheim.x86_64'",
  "100:class_g = 'mm7.exe'",
@@ -24,6 +26,7 @@ opacity-rule = [
  "100:class_g = 'steam_app_297000'", # Heroes 3
  "100:class_g = 'steam_app_1245620'", # Elden Ring
  "100:class_g = 'steam_app_233860'", # Kenshi
+ "100:class_g = 'steamwebhelper'", # big picture
  "100:class_g = 'ocarinaoftime-win64-shipping.exe'",
  "100:class_g = 'engine.exe'", # POC
  "0:_NET_WM_STATE@[0]:32a *= '_NET_WM_STATE_HIDDEN'", # fix for tabbed windows
@@ -38,16 +41,6 @@ vsync = true;
 # GLX backend - enables OpenGl rendering (more performant than X)
 backend = "glx";
 glx_no_stencil = true;
-
-#blur runs on regular backend
-#blur:
-#{
-#  method = "kernel";
-#  size = 10;
-#  deviation = 1.0;
-#  kernel = "15,15,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
-#  #kernel="7x7box";
-#};
 
 # requires glx backend for gaussian method
 blur:
