--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -3,6 +3,7 @@
 <!-- ~/.config/fontconfig/fonts.conf file to configure user font access -->
 
 <fontconfig>
+        <!-- was rbg, changing to see what happens with JetBrains font after googling-->
     <match target="font">
         <edit mode="assign" name="rgba">
             <const>rgb</const>
