--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -19,6 +19,7 @@ opacity-rule = [
  "100:class_g = 'org.remmina.Remmina'",
  "100:class_g = 'net-runelite-client-RuneLite'",
  "100:class_g = 'Microsoft Teams - Preview'",
+ "100:class_g = 'teams-for-linux'",
  "100:class_g = 'Gimp-2.10'",
  "100:class_g = 'Gimp'",
  "100:class_g = 'libreoffice-draw'",
@@ -29,6 +30,7 @@ opacity-rule = [
  "100:class_g = 'steamwebhelper'", # big picture
  "100:class_g = 'ocarinaoftime-win64-shipping.exe'",
  "100:class_g = 'engine.exe'", # POC
+ "100:class_g = 'Armored Core 2'",
  "0:_NET_WM_STATE@[0]:32a *= '_NET_WM_STATE_HIDDEN'", # fix for tabbed windows
  "0:_NET_WM_STATE@[1]:32a *= '_NET_WM_STATE_HIDDEN'",
  "0:_NET_WM_STATE@[2]:32a *= '_NET_WM_STATE_HIDDEN'",
