--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -7,8 +7,8 @@
 #: characters.
 
 #!= ->
-#font_family        FiraCode
-font_family       JetBrains Mono
+#font_family        FiraCode-Regular
+font_family       JetBrains Mono Light
 #font_family       DejaVu Sans Mono
 #bold_font        Fira Code Bold
 #italic_font      Fira Code Italic
