--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -10,8 +10,8 @@
 #font_family        FiraCode-Regular
 font_family       JetBrains Mono Light
 #font_family       DejaVu Sans Mono
-#bold_font        Fira Code Bold
-#italic_font      Fira Code Italic
+bold_font        JetBrains Mono SemiBold
+italic_font      JetBrains Mono Italic
 #bold_italic_font auto
 
 #: You can specify different fonts for the bold/italic/bold-italic
