TV mode updates & tweaks
* Add TV mode switching hotkey
* Make image preview floating
* Add UO to transparency blacklist
* Disable ranger mouse

--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -31,6 +31,7 @@ opacity-rule = [
  "100:class_g = 'ocarinaoftime-win64-shipping.exe'",
  "100:class_g = 'engine.exe'", # POC
  "100:class_g = 'Armored Core 2'",
+ "100:class_g = 'classicuo.exe'",
  "0:_NET_WM_STATE@[0]:32a *= '_NET_WM_STATE_HIDDEN'", # fix for tabbed windows
  "0:_NET_WM_STATE@[1]:32a *= '_NET_WM_STATE_HIDDEN'",
  "0:_NET_WM_STATE@[2]:32a *= '_NET_WM_STATE_HIDDEN'",
