--- a/.config/i3/config
+++ b/.config/i3/config
@@ -175,6 +175,7 @@ for_window [instance="origin.exe"] floating enable
 for_window [window_role="pop-up"] floating enable
 for_window [class="Blueman-manager"] floating enable
 for_window [title="Keyboard firmware flasher"] floating enable
+for_window [class="feh"] floating enable
 
 for_window [class="Firefox"] move to workspace $ws2
 
@@ -265,9 +266,8 @@ bindsym $mod+d exec --no-startup-id j4-dmenu-desktop --dmenu='dmenu -i -nb "#282
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status | ~/projects/i3spotifystatus/pystatus.py
+        status_command i3status | ~/projects/i3spotifystatus/pystatus.py | ~/projects/i3-vpn-status/pystatus.py
         #status_command i3blocks
-        #tray_output DP-3
         tray_output primary
         separator_symbol " || "
         position bottom
@@ -311,7 +311,7 @@ exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 # and nm-applet is a desktop environment-independent system tray GUI for it.
 exec --no-startup-id nm-applet
 exec --no-startup-id blueman-applet
-exec --no-startup-id polychromatic-tray-applet
+#exec --no-startup-id polychromatic-tray-applet
 exec dunst
 
 #############################
@@ -371,9 +371,12 @@ mode "$mode_gaps_outer" {
         bindsym Escape mode "default"
 }
 
-# mode for not registering keypreseses (alt conflicts)
+# Mode for not registering keypreseses (alt conflicts)
 bindsym $mod+Shift+i mode "Ignore"
 mode "Ignore" {
   bindsym $mod+Shift+i mode "default"
 }
+
+# Toggle TV output
+bindsym $mod+Shift+p exec /home/will/.i3/toggle_tv_mode.sh
 
