--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -28,6 +28,9 @@ italic_font      JetBrains Mono Italic
 #regular (94-104) DPI
 font_size 12
 
+# TV 1080p
+font_size 12
+
 #(4K)
 #font_size 30
 # super DPI
