Bulk small changes
* Use xrender picom backend to stop fuckery
* Picom display rules
* Fuzzy pacman functions
* Add some comments
* Fix space not mapping to leader in vim

--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -32,6 +32,8 @@ opacity-rule = [
  "100:class_g = 'engine.exe'", # POC
  "100:class_g = 'Armored Core 2'",
  "100:class_g = 'classicuo.exe'",
+ "100:class_g = 'game.exe'",
+ "100:class_g = 'dotnet'",
  "0:_NET_WM_STATE@[0]:32a *= '_NET_WM_STATE_HIDDEN'", # fix for tabbed windows
  "0:_NET_WM_STATE@[1]:32a *= '_NET_WM_STATE_HIDDEN'",
  "0:_NET_WM_STATE@[2]:32a *= '_NET_WM_STATE_HIDDEN'",
@@ -42,8 +44,11 @@ opacity-rule = [
 vsync = true;
 
 # GLX backend - enables OpenGl rendering (more performant than X)
-backend = "glx";
-glx_no_stencil = true;
+#backend = "glx";
+#glx_no_stencil = true;
+#
+# Going to try xrender backend to fix fuckery with whole pc lock
+backend = "xrender"
 
 # requires glx backend for gaussian method
 blur:
