--- a/.gitconfig
+++ b/.gitconfig
@@ -39,3 +39,6 @@
 	smudge = git-lfs smudge -- %f
 	process = git-lfs filter-process
 	required = true
+
+[url "git@gitlab.pi.planetinnovation.com.au:"]
+    insteadof = https://gitlab.pi.planetinnovation.com.au
