--- a/.config/i3/config
+++ b/.config/i3/config
@@ -304,7 +304,7 @@ bar {
 #############################
 ###    startup programs   ###
 #############################
-exec_always picom --xrender-sync-fence
+exec_always picom --xrender-sync-fence # sync fence needed on some nvidia systems with glx backend
 exec redshift-gtk
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
