Fkn sweet text after playing with Wayland

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -3,7 +3,7 @@
 <!-- ~/.config/fontconfig/fonts.conf file to configure user font access -->
 
 <fontconfig>
-        <!-- was rbg, changing to see what happens with JetBrains font after googling-->
+        <!-- was rgb, changing to see what happens with JetBrains font after googling-->
     <match target="font">
         <edit mode="assign" name="rgba">
             <const>rgb</const>
@@ -41,7 +41,7 @@
 	-->
 	<match target="pattern">
 		<edit name="dpi" mode="assign">
-			<double>96</double>
+			<double>94</double>
 		</edit>
 	</match>
 </fontconfig>
