--- a/.tmux.conf
+++ b/.tmux.conf
@@ -75,12 +75,11 @@ bind-key r new-window "ipython3"
 
 # Plugin manager
 # List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'dracula/tmux'
+#set -g @plugin 'tmux-plugins/tpm'
+#set -g @plugin 'dracula/tmux'
 
 ## Dracula
-set -g @dracula-plugins " "
-
+#set -g @dracula-plugins " "
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '/usr/share/tmux-plugin-manager/tpm'
+#run '/usr/share/tmux-plugin-manager/tpm'
