--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -7,8 +7,7 @@
 #: characters.
 
 #!= ->
-#font_family        FiraCode-Regular
-font_family       JetBrains Mono Light
+font_family      JetBrains Mono Light
 bold_font        JetBrains Mono SemiBold
 italic_font      JetBrains Mono Italic
 #bold_italic_font auto
@@ -26,9 +25,6 @@ italic_font      JetBrains Mono Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
 #regular (94-104) DPI
-font_size 12
-
-# TV 1080p
 font_size 12
 
 #(4K)
@@ -767,7 +763,9 @@ enable_audio_bell no
 #: Color scheme {{{
 #include ~/.cache/wal/colors-kitty.conf
 #include ./nord.conf
-include ./dracula/dracula.conf
+#include ./dracula/dracula.conf
+#include ./kitty-gruvbox-theme/gruvbox_dark_hard.conf
+#include ./solarized.conf
 
 # foreground #dddddd
 # background #000000
@@ -1526,3 +1524,9 @@ term kitty
 #: }}}
 
 #: }}}
+
+
+# BEGIN_KITTY_THEME
+# OneDark-Pro
+include current-theme.conf
+# END_KITTY_THEME
