--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -54,10 +54,9 @@ $menu = wofi --show drun
 
 exec-once = nm-applet &
 exec-once = waybar
-exec-once = flameshot
 exec-once = blueman-applet
 exec-once = dunst
-exec-once = redshift-gtk
+exec-once = hypridle
 
 
 #############################
@@ -75,14 +74,12 @@ cursor {
     no_hardware_cursors = true
 }
 ## unscale XWayland
-#xwayland {
-#  force_zero_scaling = true
-#}
+xwayland {
+  force_zero_scaling = true
+}
 #
-## toolkit-specific scale
-#env = GDK_SCALE,2
-#env = XCURSOR_SIZE,32
-
+## toolkit-specific scale, was 2
+env = GDK_SCALE,1.5
 
 
 #####################
@@ -246,6 +243,10 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, Q, togglesplit,
 bind = $mainMod, F, fullscreen
 bind = $mainMod CONTROL, M, exec, pavucontrol
+bind = $mainMod, TAB, workspace, previous
+
+# toggle opacity
+bind = $mainMod, O, exec, hyprctl dispatch setprop active opaque toggle
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, h, movefocus, l
@@ -321,6 +322,10 @@ bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
+
+# Screencap
+bind = $mainMod SHIFT, A, exec, hyprshot -m region --clipboard-only
+
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
@@ -339,9 +344,6 @@ windowrulev2 = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
-
-# change monitor to high resolution, the last argument is the scale factor
-monitor = , highres, auto, 2
 
 # No opacity with youtube
 windowrulev2 = opaque, title:(.*YouTube.*)
