Branch for PI conf
I'm not sold on this strategy because now there are two separate
branches. However, this clears up a lot of things such as tmux
configuration for using with windows terminal, vim settings, aliases etc.

* Add bash aliases for windows stuff
* Add PI git config
* Set tmux xterm-256color. Only issue is with bold but this is due to
  Windows term wanting to use a bright colour instead of actual bold.
  Fixable, but text looks like garbage
* Vim jellybeans, remove cutting edge vim features, fix leader

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-	name = William Brookes
-	email = wbrookes66@gmail.com
+	name = Will Brookes
+	email = will.brookes@planetinnovation.com.au
 [core]
 	editor = vim
 	autocrlf = false
@@ -39,3 +39,5 @@
 	smudge = git-lfs smudge -- %f
 	process = git-lfs filter-process
 	required = true
+[url "git@gitlab.pi.planetinnovation.com.au:"]
+	insteadof = https://gitlab.pi.planetinnovation.com.au
