--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,9 +4,7 @@ set-option -g default-shell /usr/bin/zsh
 # Options
 unbind C-b
 set-option -g prefix C-k
-#set-option -g default-terminal "screen-256color" # seems to be fine now we've fixed the font issue
-set-option -g default-terminal "tmux-256color" # using this fixes italics? May be overridden by plugin
-#set-option -g default-terminal "xterm-256color" # Apparenty this makes strikeout work but kills bold (WSL)
+set-option -g default-terminal "xterm-256color"
 set-option -g base-index 1
 set-window-option -g pane-base-index 1
 set-option -g mouse on
