--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -27,10 +27,10 @@ debug:disable_logs = false
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 #monitor=,preferred,auto,auto
-#monitor=DP-2, 1920x1080, 0x0, 1
-monitor=HDMI-A-1, 3840x2160, 0x0, 1.5
-monitor=DP-3, 1920x1080, 2560x0, 1
-#monitor=HDMI-A-1, disable TV
+monitor=DP-2, 3840x2160, 0x0, 1.5
+#monitor=DP-3, 1920x1080, 2560x0, 1
+monitor=DP-3, disable
+monitor=HDMI-A-1, disable
 
 
 ###################
@@ -55,9 +55,9 @@ $menu = wofi --show drun
 exec-once = nm-applet &
 exec-once = waybar
 exec-once = blueman-applet
-exec-once = dunst
+exec-once = swaync
 exec-once = hypridle
-
+exec-once = udiskie &
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -79,7 +79,7 @@ xwayland {
 }
 #
 ## toolkit-specific scale, was 2
-env = GDK_SCALE,1.5
+env = GDK_SCALE, 2
 
 
 #####################
@@ -244,6 +244,8 @@ bind = $mainMod, Q, togglesplit,
 bind = $mainMod, F, fullscreen
 bind = $mainMod CONTROL, M, exec, pavucontrol
 bind = $mainMod, TAB, workspace, previous
+bind = $mainMod  SHIFT, P, exec, /home/will/projects/scripts/toggle_tv.sh
+bind = $mainMod  SHIFT, D, exec, /home/will/projects/scripts/toggle_second_screen.sh
 
 # toggle opacity
 bind = $mainMod, O, exec, hyprctl dispatch setprop active opaque toggle
@@ -348,3 +350,32 @@ windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinn
 # No opacity with youtube
 windowrulev2 = opaque, title:(.*YouTube.*)
 
+# xwaylandvideobridge rules for screen sharing
+windowrulev2 = opacity 0.0 override, class:^(xwaylandvideobridge)$
+windowrulev2 = noanim, class:^(xwaylandvideobridge)$
+windowrulev2 = noinitialfocus, class:^(xwaylandvideobridge)$
+windowrulev2 = maxsize 1 1, class:^(xwaylandvideobridge)$
+windowrulev2 = noblur, class:^(xwaylandvideobridge)$
+windowrulev2 = nofocus, class:^(xwaylandvideobridge)$
+
+
+
+# Fix for Chromium based apps flickering.
+# See https://www.reddit.com/r/hyprland/comments/1enph77/chromium_based_apps_flicker_nvidia/
+render {
+    explicit_sync = 2
+    explicit_sync_kms = 0
+}
+
+opengl {
+    nvidia_anti_flicker = 0
+    force_introspection = 2
+}
+
+misc {
+    vfr = 0
+}
+
+debug {
+    damage_tracking = 0
+}
