Hyprland etc. updates following update

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -57,6 +57,7 @@ exec-once = waybar
 exec-once = blueman-applet
 exec-once = swaync
 exec-once = hypridle
+exec-once = hyprsunset
 exec-once = udiskie &
 
 #############################
@@ -358,18 +359,9 @@ windowrulev2 = maxsize 1 1, class:^(xwaylandvideobridge)$
 windowrulev2 = noblur, class:^(xwaylandvideobridge)$
 windowrulev2 = nofocus, class:^(xwaylandvideobridge)$
 
-
-
-# Fix for Chromium based apps flickering.
-# See https://www.reddit.com/r/hyprland/comments/1enph77/chromium_based_apps_flicker_nvidia/
-render {
-    explicit_sync = 2
-    explicit_sync_kms = 0
-}
-
 opengl {
     nvidia_anti_flicker = 0
-    force_introspection = 2
+    # force_introspection = 2 -- broken @ 0.48.0
 }
 
 misc {
