--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -8,6 +8,7 @@ opacity-rule = [
  "95:class_g = 'dmenu'",
  "99:name *?= 'Zoom Meeting'",
  "100:name *?= 'Zoom Webinar'",
+ "100:name *?= 'Age of Empires II: Definitive Edition",
  "100:class_g = 'firefox'",
  "100:class_g = 'Google-chrome'",
  "100:class_g = 'Opera'",
@@ -27,6 +28,7 @@ opacity-rule = [
  "100:class_g = 'steam_app_297000'", # Heroes 3
  "100:class_g = 'steam_app_1245620'", # Elden Ring
  "100:class_g = 'steam_app_233860'", # Kenshi
+ "100:class_g = 'steam_app_1771300'", # KCD2
  "100:class_g = 'steamwebhelper'", # big picture
  "100:class_g = 'ocarinaoftime-win64-shipping.exe'",
  "100:class_g = 'engine.exe'", # POC
