--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,6 +11,9 @@ set-option -g base-index 1
 set-window-option -g pane-base-index 1
 set-option -g mouse on
 
+# trying to make wayland work for copying etc.
+set-option -g update-environment "DISPLAY WAYLAND_DISPLAY SSH_AUTH_SOCK"
+
 ## Key Bindings
 ## More make vi-copy mode more like vim
 set-window-option -g mode-keys vi
@@ -29,6 +32,9 @@ set-option -gw main-pane-width 132
 set-option -gw pane-border-style "fg=colour232"
 set-option -gw pane-active-border-style "fg=colour94"
 #set-option -gw aggressive-resize on
+
+## Status bar
+set -g status-style 'fg=black bg=cyan'
 
 ## Pane based key bindings
 bind-key C-l last-window        # C-kC-l to toggle back and forth between windows
@@ -70,8 +76,7 @@ bind-key '"' split-pane -v -c '#{pane_current_path}'
 ## Shortcuts
 bind-key e new-window "echo '/ ' > $HOME/.newmailcount ; mutt ; echo '- ' > $HOME/.newmailcount"
 bind-key r new-window "ipython3"
-
-
+bind-key R source-file ~/.tmux.conf
 
 # Plugin manager
 # List of plugins
