Work losedows compatibility changes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,10 +4,11 @@ set-option -g default-shell /usr/bin/zsh
 # Options
 unbind C-b
 set-option -g prefix C-k
-set-option -g default-terminal "xterm-256color"
+set-option -g default-terminal "tmux-256color"
 set-option -g base-index 1
 set-window-option -g pane-base-index 1
 set-option -g mouse on
+set-option -g escape-time 0 # fix for impotenceshell and vim escape bullshit
 
 ## Key Bindings
 ## More make vi-copy mode more like vim
@@ -27,6 +28,9 @@ set-option -gw main-pane-width 132
 set-option -gw pane-border-style "fg=colour232"
 set-option -gw pane-active-border-style "fg=colour94"
 #set-option -gw aggressive-resize on
+
+## Status bar
+set -g status-style 'fg=green bg=black'
 
 ## Pane based key bindings
 bind-key C-l last-window        # C-kC-l to toggle back and forth between windows
@@ -67,17 +71,17 @@ bind-key '"' split-pane -v -c '#{pane_current_path}'
 ## Shortcuts
 bind-key e new-window "echo '/ ' > $HOME/.newmailcount ; mutt ; echo '- ' > $HOME/.newmailcount"
 bind-key r new-window "ipython3"
-
+bind-key R source-file ~/.tmux.conf
 
 
 # Plugin manager
 # List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'dracula/tmux'
-
-## Dracula
-set -g @dracula-plugins " "
+#set -g @plugin 'tmux-plugins/tpm'
+#set -g @plugin 'dracula/tmux'
+#
+### Dracula
+#set -g @dracula-plugins " "
 
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '/usr/share/tmux-plugin-manager/tpm'
+#run '/usr/share/tmux-plugin-manager/tpm'
