--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -127,7 +127,7 @@ decoration {
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 3
+        size = 8
         passes = 1
 
         vibrancy = 0.1696
@@ -178,6 +178,7 @@ animations {
 dwindle {
     pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
     preserve_split = true # You probably want this
+    special_scale_factor = 0.98
 }
 
 # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
@@ -214,9 +215,9 @@ input {
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
-gestures {
-    workspace_swipe = false
-}
+#gestures {
+#    workspace_swipe = false
+#}
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
