--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -8,7 +8,7 @@ opacity-rule = [
  "95:class_g = 'dmenu'",
  "99:name *?= 'Zoom Meeting'",
  "100:name *?= 'Zoom Webinar'",
- "100:name *?= 'Age of Empires II: Definitive Edition",
+ "100:name *?= 'Age of Empires II: Definitive Edition'",
  "100:class_g = 'firefox'",
  "100:class_g = 'Google-chrome'",
  "100:class_g = 'Opera'",
